# MMerroR-Evaluation

./: .env.example  .gitignore  README.md  auto_eval_all_models.py  eval_config.yaml  main.sh  pyproject.toml  requirements.txt  run.py  smoke_test.yaml  test_error_label_prediction_enhanced.py
legacy/: run_qa_for_sampled_sets.py  test_answer_correctness.py  test_error_label_prediction.py
mmerror_eval/: __init__.py  cli.py  config.py  dataset.py  labels.py  prompts.py  providers.py  reporting.py  runner.py  utils.py
prompts/: epd_presence.prompt.txt  epd_type.prompt.txt  error_label.prompt.txt
smoke_test_data/jsons/: MMErroR_00001.json  MMErroR_00002.json
